[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -18,6 +18,6 @@ Events marked with 10 (b) and 20 (d) represent practice trials.
 
 The detailed description of the tasks and the procedure can be found in this preprint:
 
-For questions about the tasks and the data please email Marta Topor at mt@nexs.ku.dk
+For questions about the tasks and the data email Marta Topor at mt@nexs.ku.dk
 
 Marta Topor 08/02/2022
