[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ Events marked with 10 (b) and 20 (d) represent practice trials.
 __________________________________________
 The detailed description of the tasks and the procedure can be found in this preprint:
 
-For questions about the tasks and the data please email Marta Topor at mt@nexs.ku.dk
+For questions about the tasks and the data please email Jacob Wienecke at wienecke@nexs.ku.dk.
 
-Marta Topor 08/02/2022  
+
+Marta Topor 17/03/2022  
