--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.0.3 2023-03-20
+  - corrected the authorship order to match the paper
 1.0.2 2023-03-17
   - Corrected the repository's author list to match the publication
 1.0.1 2023-03-17
